--- a/module 14/css/storetheme.css
+++ b/module 14/css/storetheme.css
@@ -38,6 +38,8 @@ a {
 	color: var(--color-neutral-light);
 	text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 	margin-left: 30px;
+	text-align: center;
+	text-color: var(--color-main-dark);
 }
 
 
